--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Livros a sua disposição!</h1>
         </section>
         <footer>
-            <h1>Created By <a href="">PHDEV&copy;</a> 2024&trade;</h1>
+            <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
         </footer>
     </div>
 </body>
