--- a/login.html
+++ b/login.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-bt">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrar</title>
-    <link rel="stylesheet" href="_css/style.css">
-    <link rel="shortcut ico" href="_imagens/icone.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="_css/login.css">
+    <title>Pagina de cadastro</title>
 </head>
+
 <body>
-    <div>
+    <header>
         <header>
             <img src = "_imagens/IMG-20240524-WA0035.jpg"/>
             <h1 id = "titulo">BooksLux</h1>
@@ -21,51 +22,53 @@
                 </ul>
             </nav>
         </header>
-        <div>
-            <button onclick="trocarFormulario('entrar')">Entrar</button>
-            <button onclick="trocarFormulario('registro')">Registrar</button>
-        </div>
-        <div id = "registro" class = "form-container">
+    </header>
+    <div class="container" id="container">
+        <div class="form-container sign-up">
             <form>
-                <fieldset>
-                    <legend>Registrar</legend>
-                    <p>
-                        <label for="nome"> Usuario
-                            <input type="text" name="usuario" id="nome">
-                        </label>
-                    </p>
-                    <p> 
-                        <label for="mail"> E-mail
-                        <input type="email" name="endereco" id="mail">
-                        </label> 
-                    </p>
-                    <p>
-                        <label for="senha"> Senha
-                            <input type="password" name="se" id="senha">
-                        </label>
-                    </p>
-                </fieldset>
+                <h1>Criar Conta</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <span>Ou use seu email para se registrar</span>
+                <input type="text" placeholder="Nome">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Senha">
+                <button>Registrar</button>
             </form>
         </div>
-
-        <div id = "entrar" class = "form-container active">
+        <div class="form-container sign-in">
             <form>
-                <fieldset>
-                    <legend>Entrar</legend>
-                    <p>
-                        <label for="usuario"> Usuario
-                            <input type="text" name="nome" id="usuario">
-                        </label>
-                    </p>
-                    <p>
-                        <label for="senha"> Senha
-                            <input type="password" name="se" id="senha">
-                        </label>
-                    </p>
-                </fieldset>
+                <h1>Entrar</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <span>Use a senha do seu email</span>
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Senha">
+                <a href="#">Esqueceu sua senha?</a>
+                <button>Entrar</button>
             </form>
+        </div>
+        <div class="toggle-container">
+            <div class="toggle">
+                <div class="toggle-panel toggle-left">
+                    <h1>Bem-vindo de volta leitor!</h1>
+                    <p>Entre com seus dados pessoais para usufruir de nossos maravilhosos livros</p>
+                    <button class="hidden" id="login">Entrar</button>
+                </div>
+                <div class="toggle-panel toggle-right">
+                    <h1>Olá, amigo do livro!</h1>
+                    <p>Registre seus dados pessoais para usufruir de nossos maravilhosos livros</p>
+                    <button class="hidden" id="register">Registrar</button>
+                </div>
+            </div>
         </div>
     </div>
+
     <script src="_scripts/login.js"></script>
 </body>
+
 </html>
