--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
         <section>
-            <h1>Livros a sua disposição!</h1>
+            <h1>SOBRE NÓS!</h1>
         </section>
         <footer>
             <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
