--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id = "principal">    
         <header>
-            <img src = "_imagens/IMG-20240524-WA0035.jpg"/>
+            <img src = "_imagens/logo1.jpg" alt = "logo"/>
             <h1 id = "titulo">BooksLux</h1>
             <nav id = "navega">
                 <ul>
@@ -20,10 +20,49 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <h1>Livros a sua disposição!</h1>
-        </section>
-        <footer>
+        <main>
+            <section class = "livros-sessao">
+                <h1 class = "titulo">Livros a sua disposição!</h1>
+                <div class = "livro-container">
+                    <h1 class = "topico"> - Marketing / Administração</h1>
+                    <div class = "livro">
+                        <img src="_imagens/admchiavenato.png" alt="admch">
+                        <h3 class = "titulo-livro">Princípios da Administração</h3>
+                        <p class = "autor"> <b>Por:</b> Chiavenato</p>
+                        <p class = "valor">R$ 19,99</p>
+                        <button type="submit" class="compra">Comprar</button>
+                    </div>
+                    <div class ="livro">
+                        <img src="_imagens/administração.png" alt="adm">
+                        <h3 class="titulo-livro">Administração Estratégica </h3>
+                        <p class="autor"> <b>Por:</b> Djalma De Pinho </p>
+                        <p class="valor">R$ 19,99</p>
+                    </div>
+                    <div class ="livro">
+                        <img src="_imagens/marketing4.png" alt="mkt5">
+                        <h3 class="titulo-livro">Marketing 4.0</h3>
+                        <p class="autor"> <b>Por:</b> Philip Kotler</p>
+                        <p class="valor">R$ 19,99</p>
+                    </div>
+                    <div class ="livro">
+                        <img src="_imagens/marketing5.png" alt="mkt4">
+                        <h3 class="titulo-livro">Marketing 4.0</h3>
+                        <p class="autor"> <b>Por:</b> Philip Kotler </p>
+                        <p class="valor">R$ 19,99</p>
+                    </div>
+                    <div class ="livro">
+                        <img src="_imagens/inteligencia.jpg" alt="adm">
+                        <h3 class="titulo-livro">Inteligência Emocional</h3>
+                        <p class="autor"> <b>Por:</b> Daniel Goleman</p>
+                        <p class="valor">R$ 19,99</p>
+                    </div>
+                </div>
+                <div class = "livro-container">
+
+                </div>
+            </section>
+        </main>
+            <footer>
             <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
         </footer>
     </div>
