Primeira fileira finalizada

--- a/index.html
+++ b/index.html
@@ -30,31 +30,35 @@
                         <h3 class = "titulo-livro">Princípios da Administração</h3>
                         <p class = "autor"> <b>Por:</b> Chiavenato</p>
                         <p class = "valor">R$ 19,99</p>
-                        <button type="submit" class="compra">Comprar</button>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/administração.png" alt="adm">
                         <h3 class="titulo-livro">Administração Estratégica </h3>
                         <p class="autor"> <b>Por:</b> Djalma De Pinho </p>
                         <p class="valor">R$ 19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/marketing4.png" alt="mkt5">
                         <h3 class="titulo-livro">Marketing 4.0</h3>
                         <p class="autor"> <b>Por:</b> Philip Kotler</p>
                         <p class="valor">R$ 19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/marketing5.png" alt="mkt4">
                         <h3 class="titulo-livro">Marketing 4.0</h3>
                         <p class="autor"> <b>Por:</b> Philip Kotler </p>
                         <p class="valor">R$ 19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/inteligencia.jpg" alt="adm">
                         <h3 class="titulo-livro">Inteligência Emocional</h3>
                         <p class="autor"> <b>Por:</b> Daniel Goleman</p>
                         <p class="valor">R$ 19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
                 <div class = "livro-container">
