Area commerce finalizada

--- a/index.html
+++ b/index.html
@@ -62,7 +62,80 @@
                     </div>
                 </div>
                 <div class = "livro-container">
-
+                    <h1 class="topico"> - Neurociência </h3>
+                    <div class="livro">
+                        <img src="_imagens/ativesuamente.png" alt="">
+                        <h3 class="titulo-livro">Ative sua mente</h3>
+                        <p class="autor"> <b>Por: </b> Arnoni Caldart</p>
+                        <p class="valor"> R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/cem bilhoes de neuronios.jpg" alt="">
+                        <h3 class="titulo-livro">Cem bilhões de neurônios?</h3>
+                        <p class="autor"> <b>Por: </b> Roberto Lent </p>
+                        <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/habitos atomicos.jpg" alt="">
+                        <h3 class="titulo-livro">Hábitos Atômicos</h3>
+                        <p class="autor"> <b>Por: </b> James Clear</p>
+                        <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/Psicologia.jpg" alt="">
+                        <h3 class="titulo-livro">Psicologia: neurociência e comportamentos</h3>
+                        <p class="autor"> <b>Por: </b> Hérica Landi & Lorrane Ribeiro </p>
+                        <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/poderdohabito.png" alt="">
+                        <h3 class="titulo-livro">O poder do hábito</h3>
+                        <p class="autor"> <b>Por: </b> Charles Duhigg</p>
+                        <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                </div>
+                <div class="livro-container">
+                    <h1 class="topico"> - Tecnologia</h3>
+                    <div class="livro">
+                        <img src="_imagens/hardware.png" alt="">
+                        <h3 class="titulo-livro">Hardware</h3>
+                        <p class="autor"> <b>Por: </b> Carlos B Morimoto</p>
+                        <p class="valor"> R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/python.jpg" alt="">
+                        <h3 class="titulo-livro">Python</h3>
+                        <p class="autor"> <b>Por:</b> Nilo Ney C </p>
+                        <p class="valor"> R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/logica.jpg" alt="">
+                        <h3 class="titulo-livro">Logica de programação</h3>
+                        <p class="autor"> <b>Por: </b> Paulo Silveira </p>
+                        <p class="valor"> R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/redes.jpg" alt="">
+                        <h3 class="titulo-livro">Redes</h3>
+                        <p class="autor"> <b>Por: </b> Andrew, Nick & David </p>
+                        <p class="valor"> R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/universodaprogamação.jpg" alt="">
+                        <h3 class="titulo-livro">Universo da programação</h3>
+                        <p class="autor"> <b>Por: </b> William Oliveira</p>
+                        <p class="valor"> R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
                 </div>
             </section>
         </main>
