--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BooksLux</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel ="shortcut icon" type ="image/png" href = "_imagens/icone.ico">
     <link rel = "stylesheet" type ="text/css" href = "_css/style.css">
 </head>
@@ -17,6 +18,7 @@
                     <li><a href="index.html">Livros</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="login.html">Log in</a></li>
+                    <li><a href="carrinho.html"><i id = "carrinho" class="bi bi-cart-check-fill"></i>Carrinho</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,13 +26,13 @@
             <section class = "livros-sessao">
                 <h1 class = "titulo">Livros a sua disposição!</h1>
                 <div class = "livro-container">
-                    <h1 class = "topico"> - Marketing / Administração</h1>
+                    <h1 class = "topico"> <i class="bi bi-arrow-bar-right"></i> Marketing / Administração</h1>
                     <div class = "livro">
                         <img src="_imagens/admchiavenato.png" alt="admch">
                         <h3 class = "titulo-livro">Princípios da Administração</h3>
                         <p class = "autor"> <b>Por:</b> Chiavenato</p>
                         <p class = "valor">R$ 19,99</p>
-                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                        <button type="submit" id = "botaobuy" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class ="livro">
                         <img src="_imagens/administração.png" alt="adm">
@@ -62,7 +64,7 @@
                     </div>
                 </div>
                 <div class = "livro-container">
-                    <h1 class="topico"> - Neurociência </h3>
+                    <h1 class="topico"> <i class="bi bi-arrow-bar-right"></i> Neurociência </h3>
                     <div class="livro">
                         <img src="_imagens/ativesuamente.png" alt="">
                         <h3 class="titulo-livro">Ative sua mente</h3>
@@ -100,7 +102,7 @@
                     </div>
                 </div>
                 <div class="livro-container">
-                    <h1 class="topico"> - Tecnologia</h3>
+                    <h1 class="topico"> <i class="bi bi-arrow-bar-right"></i> Tecnologia</h3>
                     <div class="livro">
                         <img src="_imagens/hardware.png" alt="">
                         <h3 class="titulo-livro">Hardware</h3>
