Login e sobre atualizados

--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
 <body>
     <div id = "principal">    
         <header>
-            <img src = "_imagens/IMG-20240524-WA0035.jpg"/>
+            <img src = "_imagens/logo1.jpg"/>
             <h1 id = "titulo">BooksLux</h1>
             <nav id = "navega">
                 <ul>
