--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <header>
-            <img src = "_imagens/IMG-20240524-WA0035.jpg"/>
+            <img src = "_imagens/logo1.jpg"/>
             <h1 id = "titulo">BooksLux</h1>
             <nav id = "navega">
                 <ul>
