--- a/index.html
+++ b/index.html
@@ -146,30 +146,35 @@
                         <h1 class="titulo-livro">Dom Casmurro</h1>
                         <p class="autor"> <b>Por: </b> Machado de Assis</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/domquixote.jpg" alt="">
                         <h1 class="titulo-livro">Dom quixote</h1>
                         <p class="autor"> <b>Por: </b> Miguel Cervantes</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/frankestein.jpg" alt="">
                         <h1 class="titulo-livro">Frankenstein</h1>
                         <p class="autor"> <b>Por: </b> Mary Shelly </p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/cortiço.jpg" alt="">
                         <h1 class="titulo-livro">O cortiço</h1>
                         <p class="autor"> <b>Por: </b> Aluíso Azevedo</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/pequenoprincipe.jpg" alt="">
                         <h1 class="titulo-livro">O pequeno príncipe</h1>
                         <p class="autor"> <b>Por: </b> Antoine D</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
                 <div class="livro-container">
@@ -179,30 +184,35 @@
                         <h1 class="titulo-livro">Jujutsu Kaisen</h1>
                         <p class="autor"> <b>Por: </b> Gege, Akutami </p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/hunterhunter.png" alt="">
                         <h1 class="titulo-livro">Hunter X Hunter</h1>
                         <p class="autor"> <b>Por: </b> Yoshihiro Togashi</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/chaisawnman.png" alt="">
                         <h1 class="titulo-livro">Chaisawn Man</h1>
                         <p class="autor"> <b>Por: </b> Tatsuki Fujimoto</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/mobpyscho100.png" alt="">
                         <h1 class="titulo-livro">Mob Pyscho 100</h1>
                         <p class="autor"> <b>Por: </b> One</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                     <div class="livro">
                         <img src="_imagens/onepunch.png" alt="">
                         <h1 class="titulo-livro">One Punch Man</h1>
                         <p class="autor"> <b>Por: </b> Yusuke Murata</p>
                         <p class="valor">R$19,99</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
                     </div>
                 </div>
             </section>
