--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
     <title>BooksLux</title>
     <link rel ="shortcut icon" type ="image/png" href = "_imagens/icone.ico">
     <link rel = "stylesheet" type ="text/css" href = "_css/style.css">
+    <link rel="stylesheet" href="_css/sobre.css">
 </head>
 <body>
     <div id = "principal">    
