--- a/sobre.html
+++ b/sobre.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BooksLux</title>
+    <title>Sobre</title>
     <link rel ="shortcut icon" type ="image/png" href = "_imagens/icone.ico">
     <link rel = "stylesheet" type ="text/css" href = "_css/style.css">
     <link rel="stylesheet" href="_css/sobre.css">
 </head>
 <body>
     <div id = "principal">    
-        <header>
+        <header id = "cabecalho">
             <img src = "_imagens/logo1.jpg"/>
             <h1 id = "titulo">BooksLux</h1>
             <nav id = "navega">
@@ -23,8 +23,15 @@
         </header>
         <section>
             <h1>SOBRE NÓS!</h1>
+            <h1>QUEM SOMOS?</h1>
+            <h1>NOSSO OBJETIVO</h1>
+            <h1>DIFERENCIAL</h1>
+            <h1>MISSÃO</h1>
+            <h1>VISÃO</h1>
+            <h1>VALORES</h1>
+            <h1>NOSSA MATRIZ SWOT</h1>
         </section>
-        <footer>
+        <footer id = "rodape">
             <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
         </footer>
     </div>
