--- a/sobre.html
+++ b/sobre.html
@@ -21,8 +21,7 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <h1>SOBRE NÓS!</h1>
+        <section id = "sessao-sobre">
             <h1>QUEM SOMOS?</h1>
             <h1>NOSSO OBJETIVO</h1>
             <h1>DIFERENCIAL</h1>
