--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="_css/login.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Pagina de cadastro</title>
 </head>
 
@@ -55,12 +56,12 @@
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
-                    <h1>Bem-vindo de volta leitor!</h1>
+                    <h1><i class="bi bi-book-fill" id = "book"></i>Bem-vindo de volta leitor!</h1>
                     <p>Entre com seus dados pessoais para usufruir de nossos maravilhosos livros</p>
                     <button class="hidden" id="login">Entrar</button>
                 </div>
                 <div class="toggle-panel toggle-right">
-                    <h1>Olá, amigo do livro!</h1>
+                    <h1><i class="bi bi-book-fill" id = "book"></i>Olá, amigo do livro!</h1>
                     <p>Registre seus dados pessoais para usufruir de nossos maravilhosos livros</p>
                     <button class="hidden" id="register">Registrar</button>
                 </div>
