Categoria Stephen King adicionada

--- a/index.html
+++ b/index.html
@@ -140,6 +140,39 @@
                     </div>
                 </div>
                 <div class="livro-container">
+                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Obras de Stephen King</h1>
+                    <div class="livro">
+                        <img src="_imagens/cemiterio.png" alt="">
+                        <h1 class="titulo-livro">O cemitério</h1>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/carrie.png" alt="">
+                        <h1 class="titulo-livro">Carrie</h1>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/itcoisa.png" alt="">
+                        <h1 class="titulo-livro">It a coisa</h1>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/olimunidado.png" alt="">
+                        <h1 class="titulo-livro">O iluminado</h1>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                    <div class="livro">
+                        <img src="_imagens/outsider.png" alt="">
+                        <h1 class="titulo-livro">Outsider</h1>
+                        <p class="valor">R$19,99<input type="checkbox" name="ebook" id="ebook">E-book<input type="checkbox" name="book" id="book">Livro</p>
+                        <button type="submit" class="compra">Comprar/Adicionar ao carrinho</button>
+                    </div>
+                </div>
+                <div class="livro-container">
                     <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Literatura</h1>
                     <div class="livro">
                         <img src="_imagens/dom-casmurro-8.jpg" alt="">
