--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <section class = "livros-sessao" id = "sessao">
                 <h1 class = "titulo">Livros a sua disposição!</h1>
                 <div class = "livro-container">
-                    <h1 class = "topico"> <i class="bi bi-arrow-bar-right"></i> Marketing / Administração</h1>
+                    <h1 class = "topico"> <i class="bi bi-arrow-bar-right"></i> Marketing / Administração <br/> </h1>
+                    <h1 class="ver-tudo"><a href="#">Ver todos</a></h1>
                     <div class = "livro">
                         <img src="_imagens/admchiavenato.png" alt="admch">
                         <h3 class = "titulo-livro">Princípios da Administração</h3>
@@ -64,7 +65,8 @@
                     </div>
                 </div>
                 <div class = "livro-container">
-                    <h1 class="topico"> <i class="bi bi-arrow-bar-right"></i> Neurociência </h3>
+                    <h1 class="topico"> <i class="bi bi-arrow-bar-right"></i> Neurociência <br/> </h3>
+                    <h1 class="ver-tudo"><a href="#">Ver todos</a></h1>
                     <div class="livro">
                         <img src="_imagens/ativesuamente.png" alt="">
                         <h3 class="titulo-livro">Ative sua mente</h3>
@@ -102,7 +104,8 @@
                     </div>
                 </div>
                 <div class="livro-container">
-                    <h1 class="topico"> <i class="bi bi-arrow-bar-right"></i> Tecnologia</h3>
+                    <h1 class="topico"> <i class="bi bi-arrow-bar-right"></i> Tecnologia <br/> </h3>
+                    <h1 class="ver-tudo"><a href="#">Ver todos</a></h1>
                     <div class="livro">
                         <img src="_imagens/hardware.png" alt="">
                         <h3 class="titulo-livro">Hardware</h3>
@@ -140,7 +143,8 @@
                     </div>
                 </div>
                 <div class="livro-container">
-                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Obras de Stephen King</h1>
+                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Obras de Stephen King <br/> </h1>
+                    <h1 class="ver-tudo"><a href="#">Ver todos</a></h1>
                     <div class="livro">
                         <img src="_imagens/cemiterio.png" alt="">
                         <h1 class="titulo-livro">O cemitério</h1>
@@ -173,7 +177,8 @@
                     </div>
                 </div>
                 <div class="livro-container">
-                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Literatura</h1>
+                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Literatura <br/> </h1>
+                    <h1 class="ver-tudo"><a href="#">Ver todos</a></h1>
                     <div class="livro">
                         <img src="_imagens/dom-casmurro-8.jpg" alt="">
                         <h1 class="titulo-livro">Dom Casmurro</h1>
@@ -211,7 +216,8 @@
                     </div>
                 </div>
                 <div class="livro-container">
-                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Mangá</h1>
+                    <h1 class="topico"><i class="bi bi-arrow-bar-right"></i> Mangá <br/> </h1>
+                    <h1 class="ver-tudo"><a href="#">Ver todos</a></h1>
                     <div class="livro">
                         <img src="_imagens/jujutsu.jpg" alt="">
                         <h1 class="titulo-livro">Jujutsu Kaisen</h1>
