--- a/sobre.html
+++ b/sobre.html
@@ -142,13 +142,13 @@
             <h1>NOSSO ORGANOGRAMA</h1>
             <h1>ESTRATÉGIA DE MARKETING</h1>
             <ul type = "dise">
-                <li><span>Estratégia de Produto</span>Catálogo de Livros: Ampliar a variedade de livros, incluindo best-sellers, lançamentos, e obras acadêmicas.<br/>Parceria com o Governo: Aproveitar programas educacionais e de incentivo à leitura para promover livros didáticos e literários.</li>
-                <li><span>Estratégia de Preço</span>Competitivo**: Manter preços competitivos em comparação com outras lojas online.<br/>Oferecer descontos periódicos, especialmente em datas comemorativas e durante campanhas governamentais.</li>
-                <li><span>Estratégia de Distribuição</span>Frete Grátis: Continuar a oferecer frete grátis para todo o Brasil.<br/>Parcerias Logísticas: Estabelecer parcerias com empresas de logística para otimizar os custos e tempos de entrega.</li>
-                <li><span> Estratégia de Comunicação</span>Marketing Digital: Utilizar SEO, Google Ads, e redes sociais (Instagram, Facebook, TikTok) para alcançar um público mais amplo.<br/>
-                    Email Marketin: Criar campanhas de email marketing segmentadas para diferentes públicos.<br/>
-                    Campanhas de Influenciadores: Parcerias com influenciadores literários e educacionais para promover os livros.<br/>
-                    Eventos e Webinars: Organizar eventos online com autores, webinars sobre temas educacionais e literários.<br/></li>
+                <li><span>Estratégia de Produto</span><br/>Catálogo de Livros: Ampliar a variedade de livros, incluindo best-sellers, lançamentos, e obras acadêmicas.<br/>Parceria com o Governo: Aproveitar programas educacionais e de incentivo à leitura para promover livros didáticos e literários.</li>
+                <li><span>Estratégia de Preço</span><br/>Competitivo: Manter preços competitivos em comparação com outras lojas online.<br/>Oferecer descontos periódicos, especialmente em datas comemorativas e durante campanhas governamentais.</li>
+                <li><span>Estratégia de Distribuição</span><br/>Frete Grátis: Continuar a oferecer frete grátis para todo o Brasil.<br/>Parcerias Logísticas: Estabelecer parcerias com empresas de logística para otimizar os custos e tempos de entrega.</li>
+                <li><span> Estratégia de Comunicação</span><br/>Marketing Digital: Utilizar SEO, Google Ads, e redes sociais (Instagram, Facebook, TikTok) para alcançar um público mais amplo.<br/>
+                Email Marketing: Criar campanhas de email marketing segmentadas para diferentes públicos.<br/>
+                Campanhas de Influenciadores: Parcerias com influenciadores literários e educacionais para promover os livros.<br/>
+                Eventos e Webinars: Organizar eventos online com autores, webinars sobre temas educacionais e literários.<br/></li>
             </ul>
         </section>
         <footer id = "rodape">
