--- a/sobre.html
+++ b/sobre.html
@@ -29,6 +29,14 @@
             <p>A BookLux é uma empresa inovadora no ramo de venda de livros, que possui um
                 modelo de negócio único. Somos uma equipe apaixonada por literatura e comprometida em
                 proporcionar acesso amplo e democrático aos livros, promovendo a leitura e o conhecimento em todo o Brasil.</p>
+            <ul id = "album-fotos">
+                <li id = "foto01" class = "foto"></li>
+                <li id = "foto02"class = "foto"></li>
+                <li id = "foto03"class = "foto"></li>
+                <li id = "foto04"class = "foto"></li>
+                <li id = "foto05"class = "foto"></li>
+                <li id = "foto06"class = "foto"></li>
+            </ul>
             <h1>NOSSO OBJETIVO<i class="bi bi-check2-circle"></i></h1>
             <p>Nosso principal objetivo é facilitar o acesso à leitura para todos os brasileiros, oferecendo
                 uma ampla variedade de livros de diferentes gêneros e temáticas, com frete grátis para todo o
