Pdf colocado sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <h1>NOSSO ORGANOGRAMA<i class="bi bi-diagram-3-fill"></i></h1>
-            <object  class = "pdf" data="_documentos/organograma.pdf" type="application/pdf" width="700px" height="550px">
+            <object  class = "pdf" data="organograma.pdf" type="application/pdf" width="700px" height="550px">
             </object>
             <h1>ESTRATÉGIA DE MARKETING<i class="bi bi-ethernet"></i></h1>
             <ul type = "dise">
