Layout basico alterado

--- a/carrinho.html
+++ b/carrinho.html
@@ -26,7 +26,7 @@
     <div class="area-carrinho">
         <h1>Seu Carrinho<i id = "carrinho" class="bi bi-cart-check-fill"></i></a></h1>
     </div>
-    <button type = "submit" id = "compra">Comprar</button>
+    <button type = "submit" id = "compra">Comprar<i class="bi bi-bag-fill"></i></button>
     <footer id = "rodape">
         <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
     </footer>
